# ToDo

./: .gitignore  CMakeLists.txt  build_me.txt  org.example.todor.desktop  todor
binary/: todor
src/: CMakeLists.txt  Main.qml  main.cpp
src/components/: AddList.qml  CMakeLists.txt  ItemsList.qml
